# hackharvard-2025

./: .gitignore  README.md  run-instructions.txt
backend/: .env  README.md  SETUP_GUIDE.md  browser-use.md  browser_task_runner.py  browser_tasks.py  claude.md  groq.py  main.py  prompt_writer.py  pyproject.toml  run_multiple_agents_test.py  search_session.json  search_session.json.bak  session_87ed1129.json.bak  session_cf773833.json  session_state.json  start.sh  temp_storage_1504b051.json  test_existing_chrome.py  twilio.py  twilio_openai_bridge.py  voice_test.py
backend/temp_agent_04d4667d/: Local State
backend/temp_agent_04d4667d/Default/: DIPS  History  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  TransportSecurity  Web Data
backend/temp_agent_04d4667d/GrShaderCache/: index
backend/temp_agent_04d4667d/GraphiteDawnCache/: data_0  data_1  data_2  index
backend/temp_agent_04d4667d/ShaderCache/: index
backend/temp_agent_04d4667d/segmentation_platform/: ukm_db
backend/temp_agent_5c60242d/: Local State
backend/temp_agent_5c60242d/Default/: DIPS  History  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  TransportSecurity  Web Data
backend/temp_agent_5c60242d/GrShaderCache/: index
backend/temp_agent_5c60242d/GraphiteDawnCache/: data_0  data_1  data_2  index
backend/temp_agent_5c60242d/ShaderCache/: index
backend/temp_agent_5c60242d/segmentation_platform/: ukm_db
backend/temp_agent_72269671/: Local State
backend/temp_agent_cd0965bf/: Local State
teresa/: index.html  package-lock.json  (+1 more)
(+134 files in other folders)
