[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use",
    "google-generativeai",
    "httpx",
    "langchain-groq",
    "langchain-openai>=0.3.34",
    "numpy",
    "openai",
    "python-dotenv",
    "sounddevice",
    "websockets",
]
