[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use >= 0.7",
    "google-generativeai",
    "langchain-groq",
    "langchain-openai>=0.3.34",
    "numpy",
    "openai <= 2.0.0",
    "python-dotenv",
    "sounddevice",
    "websockets",
    "audioop-lts>=0.2.2",
    "fastapi[standard]>=0.118.0",
    "httpx>=0.27.0",
    "websocket-client>=1.8.0",

]
